--- a/about/index.html
+++ b/about/index.html
@@ -81,7 +81,7 @@
 
 <h2 id="profile:6083a88ee3411b0d17ce02d738f69d47">profile</h2>
 
-<p><img src="/bio.jpg" alt="image" /></p>
+<p><img src="/katsufumi/bio.jpg" alt="image" /></p>
 
 <p>aaaaaa aaaaaaaaa aaaaaaaaaa aaaaa aaaaaaaaa aaaaa aaaaa aaaaaaaa aaaa aa aaaaaaa aaaaaaa aaaaaa.
 aaaaaa aaaaaaaaa aaaaaaaaaa aaaaa aaaaaaaaa aaaaa aaaaa aaaaaaaa aaaa aa aaaaaaa aaaaaaa aaaaaa.</p>
