--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css">
     <!--<![endif]-->
 
-    <link rel="stylesheet" href="http://karadaharu.org/katsufumi/css/all.min.css">
+    <link rel="stylesheet" href="http://karadaharu.org/katsufumi//css/all.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="alternate" type="application/rss+xml" title="Katsufumi Matsui" href="http://karadaharu.org/katsufumi/index.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Katsufumi Matsui" href="http://karadaharu.org/katsufumi//index.xml" />
 </head>
 <body>
 
@@ -39,19 +39,19 @@
     <div class="sidebar pure-u-1 pure-u-md-1-4">
     <div class="header">
         <hgroup>
-            <h1 class="brand-title"><a href="http://karadaharu.org/katsufumi">Katsufumi Matsui</a></h1>
+            <h1 class="brand-title"><a href="http://karadaharu.org/katsufumi/">Katsufumi Matsui</a></h1>
             <h2 class="brand-tagline"></h2>
         </hgroup>
 
         <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="http://karadaharu.org/katsufumiabout">About</a>
+                    <a href="http://karadaharu.org/katsufumi/about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="http://karadaharu.org/katsufumiworks">Works</a>
+                    <a href="http://karadaharu.org/katsufumi/works">Works</a>
                 <li class="nav-item">
-                    <a href="http://karadaharu.org/katsufumipublications">Publications</a>
+                    <a href="http://karadaharu.org/katsufumi/publications">Publications</a>
                 </li>
                 
                 
@@ -208,7 +208,7 @@ My main areas of interest are live performance, sound installation, photography,
         </ul>
     </div>
 </div>
-<script src="http://karadaharu.org/katsufumi/js/all.min.js"></script>
+<script src="http://karadaharu.org/katsufumi//js/all.min.js"></script>
         </div>
     </div>
 </div>
